# Meld_CBF

./: .gitignore  README.md  meld.md
.github/workflows/: ci.yml
pipeline/: .gitignore  README.md  USER_GUIDE.md  cbf_register_in_container.sh  cbf_stats.py  cbf_visualize.py  config.sh  meld_cbf_pipeline.sh  pyproject.toml  resolve_cbf_session.py  sync_to_nas.sh  watch_and_sync.sh
pipeline/config/: config.example.yaml  config.yaml
pipeline/meldcbf/: __init__.py  cli.py  validate.py
pipeline/profiles/local/: config.yaml
pipeline/profiles/slurm/: config.yaml
pipeline/tests/: test_aggregate_ai.py  test_cbf_stats.py  test_validate.py
pipeline/workflow/: Snakefile
pipeline/workflow/envs/: meldcbf.yaml
pipeline/workflow/rules/: aggregate.smk  common.smk  meld.smk  prepare.smk  register.smk  visualize.smk
pipeline/workflow/scripts/: aggregate_stats.py  build_samples.py
