[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "meldcbf"
version = "0.1.0"
description = "Production pipeline: MELD Graph lesion prediction + CBF perfusion analysis (Snakemake)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "snakemake>=8",
    "snakemake-executor-plugin-slurm>=0.10",
    "click>=8",
    "pandas>=1.5",
    "pyyaml>=6",
    "nibabel>=4",
    "nilearn>=0.10",
    "matplotlib>=3.5",
]

[project.scripts]
meldcbf = "meldcbf.cli:main"

[tool.setuptools]
packages = ["meldcbf"]
